# adk-stream-protocol

./: .env.example  .gitignore  .markdownlint.json  .semgrepignore  ARCHITECTURE.md  CLAUDE.md  DETAILS.md  E2E_FRONTEND_GUIDE.md  IMPLEMENTATION.md  LICENSE  README.md  SPEC.md  adk_ag_runner.py  adk_ag_tools.py  adk_compat.py  adk_vercel_id_mapper.py  ai_sdk_v6_compat.py  biome.json  chunk_logger.py  chunk_player.py  confirmation_interceptor.py  justfile  mise.toml  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  server.py  stream_protocol.py  tool_delegate.py  tsconfig.json  vitest.config.ts  vitest.global-teardown.ts
.claude/: settings.local.json
.semgrep/: python-rules.yaml
.serena/: project.yml
adk_stream_protocol/: __init__.py  adk_ag_runner.py  adk_ag_tools.py  adk_compat.py  adk_vercel_id_mapper.py  ai_sdk_v6_compat.py  approval_queue.py  bidi_event_receiver.py  bidi_event_sender.py  chunk_logger.py  chunk_player.py  confirmation_interceptor.py  frontend_tool_registry.py  frontend_tool_service.py  logging_config.py  sse_event_streamer.py  stream_protocol.py  tool_confirmation_service.py  utils.py
agents/: 2025-12-31-session-summary.md  2026-01-01-project-status.md  add_tests.md  app_plan.md  bidi-tool-execution-investigation.md  chunk_logger_e2e_design_plan.md  current_tests_fails.md  fix_plans.md  handsoff.md  insights.md  last-test-plans.md  last-test-results.md  last_issues_resolve_plans.md  layer-boundary-evaluation.md  my-understanding.md  phase5_analysis.md  playwright-phase-1-2-summary.md  playwright-scenarios-failures.md  playwright-tests-plan.md  recorder_handsoff.md  reviews.md  session-final-summary.md  skipped-tests-analysis.md  sub_tasks.md  summary.md  tasks.md  tests_plan.md  weather-tool-timeout-investigation.md
app/: globals.css  layout.tsx  page.tsx  placeholder.test.ts
assets/: ap2_spec.md  v6-beta.txt
components/: adk-bidi-chat.tsx  adk-sse-chat.tsx  audio-player.tsx  chat-audio-ui.test.tsx  chat.test.tsx  chat.tsx  gemini-chat.tsx  image-display.tsx  image-upload.tsx  message.tsx  rate-limit-error.tsx  tool-invocation.test.tsx  tool-invocation.tsx
docs/: 00_GETTING_STARTED.md  00_GLOSSARY.md  00_README.md  ARCHITECTURE.md  BUG-ADK-BIDI-TOOL-CONFIRMATION.md  BUG-BIDI-CONFIRMATION-ID-MISMATCH.md  CHUNK_LOGGER_E2E_TESTING.md  E2E_GUIDE.md  GETTING_STARTED.md  GLOSSARY.md  IMPLEMENTATION.md  REACT_MEMOIZATION.md  README.md  TEMP_FAQ.md  TESTING_STRATEGY.md  TEST_COVERAGE_AUDIT.md  adk_native_tool_confirmation_flow.md  chunk-logger-e2e-testing.md  confirmation-flow-specification.md  draft_bidi_tool_confirmation_flow.md  frontend_LIB_STRUCTURE.md  frontend_TESTING_VITEST.md  glossary.md  spec_ARCHITECTURE.md  spec_PROTOCOL.md  test-integrity-analysis.md  testing-strategy.md  testing_COVERAGE_AUDIT.md  testing_E2E.md  testing_STRATEGY.md
e2e/: adk-confirmation-minimal-bidi.spec.ts  adk-confirmation-minimal.spec.ts  adk-tool-confirmation.spec.ts  bidi-poc-longrunning.spec.ts  chat-backend-equivalence.spec.ts  chat-history-sharing.spec.ts  chunk-logger-integration.spec.ts  chunk-player-ui-verification.spec.ts  helpers.ts  systematic-mode-model-testing.spec.ts  test-chunk-download.spec.ts  tool-approval.spec.ts
experiments/: 2025-12-11_adk_bidi_ai_sdk_v6_integration.md  2025-12-11_adk_bidi_multimodal_support.md  2025-12-11_e2e_test_timeout_investigation.md  2025-12-12_adk_bidi_message_history_and_function_calling.md  2025-12-12_adk_field_mapping_completeness.md  2025-12-12_audio_stream_completion_notification.md  2025-12-12_audio_worklet_investigation.md  2025-12-13_backend_tool_approval_implementation_analysis.md  2025-12-13_bidirectional_protocol_investigation.md  2025-12-13_frontend_backend_integration_gap_analysis.md  2025-12-13_lib_test_coverage_investigation.md  2025-12-13_per_connection_state_management_investigation.md  2025-12-13_toolCallId_compatibility_investigation.md  2025-12-13_tool_approval_ai_sdk_native_handling.md  2025-12-14_adk_field_parametrized_test_coverage.md  2025-12-14_analysis_target_verification.md  2025-12-14_p4_t9_t10_test_coverage_improvement.md  2025-12-14_repeatable_chunk_logger_player.md  2025-12-15_ai_sdk_v6_internal_chunks_handling.md  2025-12-15_critical_bug_fixes.md  2025-12-15_mode_message_type_matrix_testing.md  2025-12-15_systematic_model_mode_testing.md  2025-12-15_websocket_payload_size_issue.md  2025-12-16_backend_session_persistence_fix.md  2025-12-16_bidi_function_calling_investigation.md  2025-12-16_frontend_delegate_e2e_test_simplification.md  2025-12-16_frontend_delegate_fix.md  2025-12-16_manual_send_tool_approval_design.md  2025-12-16_sendautomatically_transport_recreation_hypothesis.md  2025-12-17_tool_architecture_refactoring.md  2025-12-18_bidi_deadlock_flow_diagram.md  2025-12-18_bidi_frontend_delegate_deadlock_analysis.md  2025-12-18_bidi_function_response_investigation.md  2025-12-18_poc_phase1_results.md  (+16 more)
(+545 files in other folders)
