[project]
name = "adk-stream-protocol"
version = "0.1.1"
description = "AI SDK v6 and Google ADK integration example demonstrating data stream protocol implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk==1.21.0",
    "loguru>=0.7.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.13.2",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
mypy_path = "."
exclude = [
    "node_modules",
    ".venv",
    "build",
    "dist",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# see: https://docs.astral.sh/ruff/rules/
select = [
    "FAST", # FastAPI
    "C90", # mccabe
    "NPY", # numpy
    "PD", # pandas
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "N", # pep8-naming
    "I",  # isort
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "PLE", # Pylint errors
    "PLR", # Pylint refactor
    "UP", # pyupgrade
    "FURB", # refurb
    # "DOC", # pydoclint
    # "D", # pydocstyle
    "RUF", # Ruff-specific rules
]
extend-ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["PLR2004", "T201"]
"tests/**/*.py" = ["PLR2004", "T201"]
"scripts/**/*.py" = ["T201","PLR2004","C901","PLR0912","PLR0915", "PLR0911"]