[project]
name = "adk-stream-protocol"
version = "0.1.1"
description = "AI SDK v6 and Google ADK integration example demonstrating data stream protocol implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk==1.21.0",
    "loguru>=0.7.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.13.2",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
mypy_path = "."
exclude = [
    "node_modules",
    ".venv",
    "build",
    "dist",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "FAST", "C90", "NPY", "PD", "B", "A", "DTZ", "T20", "N", "I", "E", "F", "PLE", "PLR", "UP", "FURB", "RUF", "TID", "PTH", "S"
]
# E402は"E"に含まれるため削除。他、日本語コメント許容の設定などは維持。
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__".msg = "__future__ is generally prohibited in Python 3.13 and later. Please follow the latest language specifications."

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "T201", "S101"]
"scripts/**/*.py" = ["T201", "PLR2004", "C901", "PLR0912", "PLR0915", "PLR0911"]