[project]
name = "adk-stream-protocol"
version = "0.1.2"
description = "AI SDK v6 and Google ADK integration example demonstrating data stream protocol implementation"
readme = "README.md"
authors = [
    { name = "hironow" },
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "google-adk[extensions]>=1.22.0",
    "loguru>=0.7.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.13.2",
    "pillow>=12.0.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
python_version = "3.14"
explicit_package_bases = true
mypy_path = "."
exclude = [
    "node_modules",
    ".venv",
    "build",
    "dist",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "FAST", "C90", "NPY", "PD", "B", "A", "DTZ", "T20", "N", "I", "E", "F", "PLE", "PLR", "UP", "FURB", "RUF", "TID", "PTH", "S"
]
# E402は"E"に含まれるため削除。他、日本語コメント許容の設定などは維持。
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__".msg = "__future__ is generally prohibited in Python 3.14 and later. Please follow the latest language specifications."

[tool.ruff.lint.per-file-ignores]
# Tests: Allow complexity, magic values, print statements, assertions, unused vars, background tasks
"tests/**/*.py" = ["PLR2004", "T201", "S101", "C901", "PLR0912", "PLR0915", "PLR0913", "PLR0911", "F841", "RUF006"]
# Scripts: Allow complexity for automation scripts
"scripts/**/*.py" = ["T201", "PLR2004", "C901", "PLR0912", "PLR0915", "PLR0911"]
# Protocol handlers: Complex state machines require higher complexity thresholds
"adk_stream_protocol/bidi_*.py" = ["C901", "PLR0912", "PLR0915"]
